# frame-compare

./: .gitignore  .mlc-config.json  CHANGELOG.md  CODEX.md  LICENSE  MANIFEST.in  PATHS-AUDIT.md  README.before-humanize.2025-09-29.md  README.md  TMDBPatch.txt  agents.md  bench_tonemap.py  check_dovi.py  cli_layout.v1.json  commitlint.config.cjs  config.toml  config.toml.template  frame_compare.py  importlinter.ini  main.py  package-lock.json  package.json  pylance_fix.md  pyproject.toml  pyrightconfig.json  reproduce_alignment.py  requirements-dev.txt  requirements.txt  vs_check.py
.agent/rules/: project-guidance.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release-please-config.json  release.yml
.github/workflows/: ci.yml  commitlint.yml  decision-minute.yml  publish.yml  release-please.yml
.serena/: project.yml
.serena/memories/: code_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
Legacy/: comp.py  compv2.py
data/: __init__.py  config.toml  config.toml.template
docs/: DECISIONS.md  IMPLEMENTATION_NOTES.md  ISSUES_TODO.md  PARITY_MATRIX.csv  README_REFERENCE.md  REVIEW.md  TEST_GAPS.md  audio_alignment_pipeline.md  color_fix.md  color_pipeline_alignment.md  config_audit.md  config_reference.md  context_summary.md  current_pipeline_trace.md  deep_review.md  docs_inventory.md  fix_crop.md  geometry_pipeline.md  hdr_tonemap_overview.md  legacy_tonemap_pipeline.md  regression_notes_2025-09-22.md  runner_refactor_checklist.md  task_vspreview_manual_alignment.md  tests_plan_paths_root_lock.md  tests_plan_vspreview_manual_alignment.md  tonemap.md  tonemap_darkness_update.md  tonemap_update.md  vspreview_console_fix.md  vspreview_update.md
docs/_generated/: config_tables.md
docs/adr/: 0001-paths-root-lock.md
docs/refactor/: api_hardening.md  flag_audit.md  frame_compare_cli_refactor.md  mod_refactor.md  refactor_cleanup.md  runner_service_split.md  typing_refactor.md
features/CLI/: GUIDE.md
legacy/: compv4_improved.py
presets/: batch-qc.toml  hdr-vs-sdr.toml  quick-compare.toml
src/: __init__.py  analysis.py  audio_alignment.py  cli_layout.py  cli_layout.pyi  config_loader.py  config_paths.py  config_template.py  config_template.pyi  datatypes.py  report.py  report.pyi  screenshot.py  slowpics.py  slowpics.pyi  tmdb.py  utils.py  vs_core.py  vs_core.pyi
src/cli/: __init__.py  args.py
src/data/: config.toml.template
src/frame_compare/: __init__.py  alignment_helpers.py  alignment_preview.py  alignment_runner.py  analyze_target.py  cache.py  cli_entry.py  cli_layout.py  cli_runtime.py  cli_utils.py  compat.py  config_helpers.py  config_template.py  config_writer.py  core.py  diagnostics.py  doctor.py  env_flags.py  layout_utils.py  media.py  metadata.py  net.py  planner.py  preflight.py  presets.py  report.py  result_snapshot.py  runner.py  runtime_utils.py  selection.py  slowpics.py  subproc.py  tmdb_workflow.py  vspreview.py  wizard.py
src/tonemap/: __init__.py  config.py  core.py  detect.py  exceptions.py  overlay.py  (+1 more)
tests/: __init__.py  conftest.py  test_alignment_runner.py  test_analysis.py  test_audio_alignment.py  test_cache_identity.py  test_cli_doctor.py  test_cli_help.py  test_cli_layout.py  test_cli_layout_formatting.py  test_cli_layout_render.py  test_cli_wizard.py  test_clip_metadata_probe.py  test_config.py  test_config_loader.py  test_config_template.py  test_console_safety.py  test_dovi_debug_logging.py  test_env_flags.py  test_frame_compare.py  test_layout_utils.py  test_paths_preflight.py  test_planner.py  test_preflight.py  test_report.py  test_screenshot.py  test_slowpics.py  test_tmdb.py  test_tonemap.py  test_utils.py  test_vs_core.py  test_vspreview.py  test_wizard.py
tools/: align_videos.py  audio_offset_check.py  check_wheel_contents.py  gen_config_docs.py  readability_check.py  run_pytest.mjs
typings/: frame_compare.pyi
(+87 files in other folders)
