[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-compare"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "rich",
    "colorama",
    "requests",
    "requests-toolbelt",
    "httpx",
    "natsort",
    "anitopy",
    "guessit",
    "click>=8.1",
    "numpy",
    "librosa",
    "soundfile",
    "tqdm",
]

[project.optional-dependencies]
vapoursynth = [
    "vapoursynth>=72",
]
audio = []  # backwards compatibility: audio extras are now core

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "requests-mock",
    "ruff",
    "black",
]

[tool.setuptools]
packages = ["frame_compare", "data"]
include-package-data = true

[tool.setuptools.package-dir]
frame_compare = "src/frame_compare"
data = "data"

[tool.setuptools.package-data]
data = ["config.toml", "config.toml.template"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
