[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-compare"
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich",
    "colorama",
    "requests",
    "requests-toolbelt",
    "httpx",
    "natsort",
    "anitopy",
    "guessit",
    "click>=8.1",
    "numpy",
    "librosa",
    "soundfile",
    "tqdm",
]

[project.optional-dependencies]
vapoursynth = [
    "vapoursynth>=72",
]
audio = []  # backwards compatibility: audio extras are now core
preview = [
    "vspreview>=0.7",
    "PySide6>=6.6",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "requests-mock",
    "ruff",
    "black",
]

[tool.setuptools]
package-dir = {"src" = "src", "src.frame_compare" = "src/frame_compare", "data" = "src/data"}
packages = ["src", "src.frame_compare", "data"]
include-package-data = true
py-modules = ["frame_compare"]

[tool.setuptools.package-data]
"data" = ["config.toml.template"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
