[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-compare"
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich",
    "colorama; sys_platform == 'win32'",
    "requests",
    "requests-toolbelt",
    "httpx",
    "natsort",
    "anitopy",
    "guessit",
    "click>=8.1",
    "numpy",
    "librosa",
    "soundfile",
    "tqdm",
    "vapoursynth>=72",
    "pyright>=1.1.407",
]

[project.optional-dependencies]
vapoursynth = [
    "vapoursynth>=72",
]
audio = []  # backwards compatibility: audio extras are now core
preview = [
    "vspreview>=0.7",
    "PySide6>=6.6",
]

[project.scripts]
frame-compare = "frame_compare:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "requests-mock",
    "ruff",
    "black",
    "build",
    "twine",
    "check-wheel-contents",
]

[tool.setuptools]
package-dir = {"src" = "src", "src.frame_compare" = "src/frame_compare", "data" = "src/data"}
packages = ["src", "src.frame_compare", "data"]
include-package-data = true
py-modules = ["frame_compare"]

[tool.setuptools.package-data]
"data" = ["config.toml.template", "report/*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-p no:vsengine"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["typings", "legacy", "Legacy"]
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["frame_compare", "src"]
